LPD-35517 Simplify (removed from Java 17)